Fixed missing expand/collapse icon, dark mode cluster selector on map. Minor TS fix.

--- a/assets/main.css
+++ b/assets/main.css
@@ -21,7 +21,7 @@ a {
   padding: 3px;
 }
 
-.button-icon, button {
+button {
   color: var(--color-text);
   background: var(--color-background);
 }
